Sat Jul  1 17:18:17 BST 2006 (njh)
----------------------------------
  * libclamav:	Free memory earlier

Sat Jul  1 04:49:32 BST 2006 (njh)
----------------------------------
  * libclamav:	Large binhex files were not being handled gracefully. Tidied
  			the handling code. Note that large binhex are not
			currently decoded.
			Bug reported by Luca

Thu Jun 29 19:42:01 CEST 2006 (acab)
  * libclamav: Revert old UPX code due to bugs
               Add algorithmic detection of Win32.Kriz

Wed Jun 28 17:16:06 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Code tidy

Wed Jun 28 15:06:08 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: include CVD header (without MD5 and digital signature)
		       at the top of db.info file

Wed Jun 28 00:00:50 CEST 2006 (tk)
----------------------------------
  * sigtool: --diff: initial version of update script generator

Mon Jun 26 20:23:22 CEST 2006 (tk)
----------------------------------
  * libclamav: allow wildcarded prefix when signature contains static
	       pattern of length AC_DEFAULT_DEPTH

Sun Jun 25 14:29:22 CEST 2006 (tk)
----------------------------------
  * libclamav/matcher-ac.c: fix possible false matches of alternatives
			    Problem reported by Nicolas Riendeau
			    <knightr*istop.com>

Fri Jun 23 00:01:16 CEST 2006 (tk)
----------------------------------
  * docs/signatures.pdf: update

Thu Jun 22 11:14:25 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: create db.info file and include it in CVD

Wed Jun 21 21:06:06 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: use getpass() replacement in getdsig(), thanks to
		       Luca Gibelli <luca*clamav.net>

Wed Jun 21 09:55:54 BST 2006 (njh)
----------------------------------
  * clamav-milter.c:	Fix compilation error introduced by strrcpy move

Tue Jun 20 20:37:21 BST 2006 (njh)
----------------------------------