@@ -1,3 +1,7 @@
+Sat Jul  1 22:04:04 BST 2006 (njh)
+----------------------------------
+  * libclamav:	More freeing memory earlier
+
 Sat Jul  1 17:18:17 BST 2006 (njh)
 ----------------------------------
   * libclamav:	Free memory earlier
